Fix borders + gaps

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ html {
 *:after {
     box-sizing: inherit;
     margin: 0;
+    font-family: monospace;
 }
 
 body {
@@ -24,15 +25,19 @@ body {
     flex-direction: column;
     padding: 8px;
     background: white;
+    gap: 8px;
 }
 
 #display {
     min-width: 16px;
-    min-height: 32px;
+    min-height: 58px;
     text-align: right;
     background: #999;
     color: black;
-    padding: 4px;
+    padding: 8px;
+    font-size: 32px;
+    border-radius: 8px;
+    border: 2px #333 solid;
 }
 
 #keys {
@@ -44,15 +49,20 @@ body {
     display: flex;
 }
 
-.key-column {
-    flex-direction: column;
+.key-row .stretch {
+    flex-grow: 1;
 }
 
-.key-row button,
-.key-column button {
-    width: 100%;
-    height: 100%;
-    flex-grow: 1;
+button {
+    font-size: 24px;
+    min-height: 48px;
+    min-width: 48px;
+    border-radius: 8px;
+    margin: 2px;
+}
+
+.key-column {
+    flex-direction: column;
 }
 
 #function-keys {
@@ -60,6 +70,7 @@ body {
     flex-direction: column;
 }
 
-#function-keys .key-row {
-    flex-grow: 1;
+.red {
+    background: lightcoral;
+    color: white;
 }
